gcc/testsuite/g++.old-deja/g++.brendan/err-msg6.C
// { dg-do assemble  }
// GROUPS passed error-messages
class foo {
public:
  ~bar () {}// { dg-error "" }  destructor `bar' must match class name `foo'.*
};

